Refactor: Rename project to TaskLine with minimalist code improvements
- Renamed project from springOne to TaskLine
- Moved all classes from com.example.springOne to com.example.taskline
- Removed redundant @Repository annotation from TaskRepository
- Replaced collect(Collectors.toList()) with toList() for cleaner code
- Removed redundant status initialization in Task constructor
- Cleaned up extra blank lines in main application